--- a/.gitconfig
+++ b/.gitconfig
@@ -5,12 +5,26 @@
     user = tinfoil-knight
 [alias]
     s       = status
+    d       = diff
+    dc      = diff --cached
     a       = add
     aa      = add --all
     cm      = commit -m
+    ca      = commit --amend -m  
+    p       = push
+    po      = push origin
     pom     = push origin master
-    puom    = pull origin master
+    pl      = pull origin
+    plom    = pull origin master
+    sync    = !git pull && git push
     co      = checkout
     cob     = checkout -b
+    cor     = checkout --track
+    com     = checkout master
     ls      = log --oneline
+    last    = log --name-status HEAD^..HEAD
+    st      = stash
+    stp     = stash pop
+    alias   = !git config -l | grep alias | cut -c 7-
+
 
