added more installs to brew.sh

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,15 +14,18 @@
     p       = push
     po      = push origin
     pom     = push origin master
-    pl      = pull origin
+    pl      = pull
+    plo     = pull origin
     plom    = pull origin master
     sync    = !git pull && git push
+    br      = branch
+    brD     = branch -D
     co      = checkout
     cob     = checkout -b
     cor     = checkout --track
     com     = checkout master
     ls      = log --oneline
-    last    = log --name-status HEAD^..HEAD
+    last    = log -1 HEAD
     st      = stash
     stp     = stash pop
     alias   = !git config -l | grep alias | cut -c 7-
