--- a/.gitconfig
+++ b/.gitconfig
@@ -24,8 +24,11 @@
     cob     = checkout -b
     cor     = checkout --track
     com     = checkout master
+    f       = fetch
+    fo      = fetch origin
     ls      = log --oneline
-    last    = log -1 HEAD
+    last    = log -1
+    lastp   = log -p -1
     st      = stash
     stp     = stash pop
     alias   = !git config -l | grep alias | cut -c 7-
