--- a/.gitconfig
+++ b/.gitconfig
@@ -1,16 +1,18 @@
 [user]
-    name    = Kunal Kundu
-    email   = kunal99kundu@gmail.com
+    name       = Kunal Kundu
+    email      = kunal99kundu@gmail.com
+    signingkey = 142E0220E496E871
 [github]
     user    = tinfoil-knight
 [core]
-    editor        = vim
-    excludesfile  = ~/.gitignore
-    signingkey    = 36B13A431E97C3E3
+    editor       = vim
+    excludesfile = ~/.gitignore
 [credential]
     helper = osxkeychain
 [init]
     defaultBranch = master
+[gpg]
+    program = gpg
 [alias]
     s       = status
     d       = diff
@@ -18,9 +20,9 @@
     ds      = diff --stat
     a       = add
     aa      = add --all
-    cm      = commit -m
-    ca      = commit --amend -m
-    can     = commit --amend --no-edit  
+    cm      = commit -S -m
+    ca      = commit --amend -S -m
+    can     = commit --amend --no-edit -S
     p       = push
     po      = push origin
     pom     = push origin master
@@ -28,22 +30,24 @@
     plo     = pull origin
     plom    = pull origin master
     sync    = !git pull && git push
+    # br: -r for remote branches
     br      = branch
     brD     = branch -D
+    # co: - for getting back to previous branch
     co      = checkout
     cob     = checkout -b
     cor     = checkout --track
     com     = checkout master
     # cod: checkout to the default branch
-    cod     = !git switch $(awk -F "/" '{print $NF}' .git/refs/remotes/origin/HEAD)
+    cod	    = !git switch $(awk -F "/" '{print $NF}' .git/refs/remotes/origin/HEAD)
     f       = fetch
     fo      = fetch origin
     ls      = log --oneline
     last    = log -p -1
     st      = !git add --all && git stash
-    stl     = stash list --stat
+    stl	    = stash list
     stp     = stash pop
-    sta     = git stash apply
+    sta     = stash apply
     alias   = !git config -l | grep alias | cut -c 7-
     wip     = for-each-ref --sort='authordate:iso8601' --format=' %(color:green)%(authordate:relative)%09%(color:white)%(refname:short)' refs/heads
     cp      = cherry-pick
