--- a/.gitconfig
+++ b/.gitconfig
@@ -1,12 +1,12 @@
 [user]
-	name        = Kunal Kundu
-	email       = kunal99kundu@gmail.com
-	signingkey  = 142E0220E496E871
+	name = Kunal Kundu
+	email = kunal99kundu@gmail.com
+	signingkey  = 287C1397CECC1F35
 [github]
 	user = tinfoil-knight
 [core]
 	editor       = vim
-	excludesfile = /Users/kunalkundu/.gitignore
+	excludesfile = /Users/kunal/.gitignore
 [credential]
 	helper = osxkeychain
 [init]
@@ -14,9 +14,12 @@
 [gpg]
 	program = gpg
 [commit]
-	gpgsign = true
+	gpgsign = false
+	template = /Users/kunal/.stCommitMsg
 [pull]
 	rebase = true
+[push]
+	autoSetupRemote = true
 [alias]
 	# default: is preset for cloned repos, set manually: git remote set-head origin -a
 	default = !awk -F "/" '{print $NF}' .git/refs/remotes/origin/HEAD
@@ -40,6 +43,7 @@
 	plo     = pull origin
 	plom    = pull origin master
 	plod    = !git pull origin $(git default)
+  plum    = !git pull upstream $(git default)
 	rbd     = !git rebase $(git default)
 	# br: -r for remote branches
 	br      = branch
@@ -60,8 +64,7 @@
 	sts     = stash show -p
 	stp     = stash pop
 	sta     = stash apply
-	stD     = stash drop
+	std     = stash drop
+	save    = !git add --all && git stash && git stash apply
 	alias   = !git config -l | grep alias | cut -c 7-
-	cl      = !git log --oneline $(git describe --tags --abbrev=0 @^)..@ --pretty=format:"%s"
-	# use A..B to cherry pick a range [A exclusive]
 	cp      = cherry-pick
